KravDokumentFravær bruker tidslinje internt isdf til/fra List